# schema-migration

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
unified_db_mcp/: config.py  schema_migrate.py  server.py
unified_db_mcp/database_connectors/: __init__.py  base_connector.py  cassandra_connector.py  mariadb_connector.py  mongodb_connector.py  mysql_connector.py  postgresql_connector.py  sqlite_connector.py  sqlserver_connector.py  supabase_connector.py
unified_db_mcp/helpers/: __init__.py  schema_utils.py  supabase_api.py  supabase_rest_api.py  type_converter.py
unified_db_mcp/tools/: __init__.py  migrate_schema_tool.py  schema_connector_tools.py
